Add functionality to remove a todo

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <form>
         <input type="text" />
-        <button>Add</button>
+        <button>Ajouter</button>
       </form>
       <ul></ul>
     </div>
