--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
     <title>To do</title>
   </head>
   <body>
     <div class="container">
       <form>
         <input type="text" />
-        <button>Ajouter</button>
+        <button>Add</button>
       </form>
       <ul></ul>
     </div>
