--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,15 @@
     <title>To do</title>
   </head>
   <body>
-    <div class="container">
-      <form>
-        <input type="text" />
-        <button>Add</button>
-      </form>
-      <ul></ul>
+    <div class="content">
+      <h1>To Do List</h1>
+      <div class="container">
+        <form>
+          <input type="text" />
+          <button class="add">Add</button>
+        </form>
+        <ul></ul>
+      </div>
     </div>
     <script type="module" src="./index.js"></script>
   </body>
